Week 1-2 Foundation Complete: Dataset, Security, SIEM, AI Services
🎯 MENDICANT_BIAS Orchestrated 4-Agent Parallel Mission

═══════════════════════════════════════════════════════════════

## 🏆 THE_DIDACT - Dataset Acquisition (COMPLETE)

**CICIDS2017 Improved Dataset Successfully Acquired**
- 2.1M network flow records (1.1GB local, excluded from git)
- 24 attack types + benign traffic (78.91% normal, 21.09% attacks)
- 84 CICFlowMeter features validated
- Quality: 4.6/5.0 - Using corrected 2021 version
- Source: Distrinet Research, KU Leuven

**Deliverables:**
- datasets/CICIDS2017/README.md (600+ lines)
- datasets/CICIDS2017/DATASET_VALIDATION_REPORT.md (800+ lines)
- datasets/CICIDS2017/validate_dataset.py (validation script)
- Dataset files available locally (see README for download)

**Attack Coverage:**
- DoS/DDoS: 366,872 samples (17.5%)
- Port Scanning: 159,151 samples (7.6%)
- Brute Force: 8,097 samples (0.4%)
- Web Attacks: 691 samples (XSS, SQLi)
- Botnet: 2,208 samples
- Advanced: Infiltration, Heartbleed

═══════════════════════════════════════════════════════════════

## 🛡️ LOVELESS - Security Baseline Audit (COMPLETE)

**Comprehensive Security Assessment: 6.5/10 (MODERATE RISK)**

**Critical Vulnerabilities Identified: 6**
- AISOC-2025-001: Redis unauthenticated (CVSS 9.8)
- AISOC-2025-002: Alert Triage API unauthenticated (CVSS 8.6)
- AISOC-2025-003: LLM prompt injection gaps (CVSS 8.1)
- AISOC-2025-004: Weak default credentials (CVSS 9.1)
- AISOC-2025-005: Information disclosure (CVSS 5.3)
- AISOC-2025-006: Missing SSL cert generation (CVSS 7.5)

**Security Testing:**
- SQL injection detection: PASS (3/4 patterns)
- Command injection: PASS (all patterns)
- Prompt injection: PASS (all patterns)
- Log sanitization: PASS (credentials redacted)
- Input validation: PASS (comprehensive)

**Verdict:**
- Development/Staging: ✅ APPROVED
- Production: ❌ BLOCKED (Phase 0 remediation required, 4-8h)

**Deliverables:**
- docs/SECURITY_BASELINE.md (32KB, 500+ lines

--- a/.gitignore
+++ b/.gitignore
@@ -48,11 +48,16 @@ secrets/
 config/secrets.yaml
 
 # Datasets (large files)
-datasets/*.csv
-datasets/*.pcap
-datasets/*.json
+datasets/**/*.csv
+datasets/**/*.pcap
+datasets/**/*.json
+datasets/**/*.zip
 !datasets/README.md
 !datasets/.gitkeep
+!datasets/**/README.md
+!datasets/**/DATASET_VALIDATION_REPORT.md
+!datasets/**/*.py
+!datasets/**/*.md5
 
 # Models (large files)
 models/*.bin
