--- a/services/rag-service/requirements.txt
+++ b/services/rag-service/requirements.txt
@@ -10,7 +10,7 @@ pydantic-settings==2.5.2
 # RAG Framework
 langchain==0.3.15
 langchain-community==0.3.15
-langchain-core==0.3.28
+langchain-core==0.3.31
 
 # Vector Database
 chromadb==0.5.23
@@ -24,7 +24,7 @@ httpx==0.27.2
 
 # Data Processing
 pandas==2.2.3
-numpy==2.2.1
+numpy>=1.22.4,<2.0
 
 # Logging & Monitoring
 python-json-logger==2.0.7
